@startuml
skinparam classAttributeIconSize 0
skinparam style strictuml

interface Command {
    + execute(db: StudentDatabase, storage: Storage): CommandResult
    + undo(db: StudentDatabase, storage: Storage): CommandResult
    + isUndoable(): boolean
}

class SortCommand {
    - category: String
    + SortCommand(category: String)
    + execute(db: StudentDatabase): CommandResult
    + execute(db: StudentDatabase, storage: Storage): CommandResult
    + undo(db: StudentDatabase): CommandResult
    + undo(db: StudentDatabase, storage: Storage): CommandResult
    + isUndoable(): boolean
}

class StudentDatabase {
    + getAllStudents(): List<Student>
}

class Student {
    + getName(): String
    + getCourse(): String
    + calculateCap(): double
    + getTotalMCs(): int
}

class CommandResult {
    + CommandResult(message: String, isExit: boolean)
}

class Storage {
}

Command <|.. SortCommand
SortCommand ..> StudentDatabase : uses
SortCommand ..> Storage : ignores
SortCommand ..> Student : accesses data
SortCommand ..> CommandResult : produces
@enduml
